<?xml version="1.0" encoding="UTF-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profileType"
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:layout_marginTop="20dp"
                android:text="@string/prospective_student"
                android:textAlignment="center"
                android:textColor="@color/clemsonOrange"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profileInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/clemsonOrange"
                android:text="@string/applications_taken_header"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="92dp"
                android:layout_marginTop="20dp"
                android:text="@string/applications_taken"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/clemsonOrange"
                android:text="@string/due_dates"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/prospective_deadlines"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prospectiveLink"
                android:layout_marginTop="20dp"
                android:textSize="30sp"/>

            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp">

                <ImageButton
                    android:id="@+id/backBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:background="@drawable/back_background"
                    android:contentDescription="@string/back_to_previous_page"
                    android:src="@drawable/back_arrow">

                </ImageButton>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
