<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SportsActivity">


    <TextView
        android:id="@+id/homeTeamName"
        style="@style/teamName"
        android:layout_width="151dp"
        android:layout_height="32dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="64dp"
        android:text="@string/homeTeam"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/awayTeamName"
        style="@style/teamName"
        android:layout_width="151dp"
        android:layout_height="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="48dp"
        android:text="@string/awayTeam"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/homeTeamName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/homeTeamScore"
        style="@style/teamScore"
        android:layout_width="82dp"
        android:layout_height="33dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:text="@string/homeScore"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeTeamName" />


    <TextView
        android:id="@+id/awayTeamScore"
        style="@style/teamScore"
        android:layout_width="81dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="88dp"
        android:text="@string/awayScore"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/penaltyFragmentContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/awayTeamName"
        app:layout_constraintVertical_bias="0.0" />

    <FrameLayout
        android:id="@+id/penaltyFragmentContainer"
        android:layout_width="361dp"
        android:layout_height="302dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clickBelow"
        app:layout_constraintVertical_bias="0.113" />

    <TextView
        android:id="@+id/clickBelow"
        style="@style/penaltyHeader"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="52dp"
        android:text="@string/clickBelow"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeTeamScore" />

</androidx.constraintlayout.widget.ConstraintLayout>